--- a/blocklib/fft/test/meson.build
+++ b/blocklib/fft/test/meson.build
@@ -2,10 +2,10 @@
 #    QA
 ###################################################
 
-if get_option('enable_testing')
+if GR_ENABLE_PYTHON
     test('qa_fft', py3, args : files('qa_fft.py'), env: TEST_ENV)
-    if (cuda_available and get_option('enable_cuda'))
-    test('qa_cufft', py3, args : files('qa_cufft.py'), env: TEST_ENV)
+    if (IMPLEMENT_CUDA)
+        test('qa_cufft', py3, args : files('qa_cufft.py'), env: TEST_ENV)
     endif
 
 endif
