--- a/blocklib/filter/test/meson.build
+++ b/blocklib/filter/test/meson.build
@@ -2,7 +2,7 @@
 #    QA
 ###################################################
 
-if get_option('enable_testing')
+if GR_ENABLE_PYTHON
     test('qa_fir_filter', find_program('qa_fir_filter.py'), env: TEST_ENV)
     test('qa_iir_filter', find_program('qa_iir_filter.py'), env: TEST_ENV)
     test('qa_pfb_channelizer', find_program('qa_pfb_channelizer.py'), env: TEST_ENV)
