--- a/blocklib/zeromq/test/meson.build
+++ b/blocklib/zeromq/test/meson.build
@@ -2,7 +2,7 @@
 #    QA
 ###################################################
 
-if get_option('enable_testing')
+if GR_ENABLE_PYTHON
     test('qa_zeromq_pushpull', py3, args : files('qa_zeromq_pushpull.py'), env: TEST_ENV)
     test('qa_zeromq_pull_msg_source', py3, args : files('qa_zeromq_pull_msg_source.py'), env: TEST_ENV)
     test('qa_zeromq_pubsub', py3, args : files('qa_zeromq_pubsub.py'), env: TEST_ENV)
