--- a/blocklib/fileio/test/meson.build
+++ b/blocklib/fileio/test/meson.build
@@ -2,7 +2,7 @@
 #    QA
 ###################################################
 
-if get_option('enable_testing')
+if GR_ENABLE_PYTHON
     test('qa_file_source', py3, args : files('qa_file_source.py'), env: TEST_ENV)
     test('qa_file_sink', py3, args : files('qa_file_sink.py'), env: TEST_ENV)
 
