--- a/utils/modtool/newmod/meson.build
+++ b/utils/modtool/newmod/meson.build
@@ -7,16 +7,29 @@ project('gr4-newmod', 'cpp',
   license : 'GPLv3',
   default_options : ['cpp_std=c++17'])
 
+# Import python3 meson module which is used to find the Python dependencies.
+# Python3 is required for code generation
+py3 = import('python').find_installation('python3')
+py3_version = py3.language_version()
+if py3_version.version_compare('< 3.6')
+  error('Invalid python version!?')
+endif
+
+GR_ENABLE_PYTHON = false
+if (get_option('enable_python'))
 python3_dep = dependency('python3', required : get_option('enable_python'))
 python3_embed_dep = dependency('python3-embed', required : get_option('enable_python'))
-py3 = import('python').find_installation('python3')
 pybind11_dep = dependency('pybind11', required : get_option('enable_python'))
-json_dep = dependency('nlohmann_json')
-
 incdir_numpy = run_command(py3,
   ['-c', 'import os; os.chdir(".."); import numpy; print(numpy.get_include())'],
   check : true
 ).stdout().strip()
+
+GR_ENABLE_PYTHON = true
+endif
+
+py3 = import('python').find_installation('python3')
+json_dep = dependency('nlohmann_json')
 
 if (get_option('enable_testing'))
     TEST_ENV = environment()
