blocks: Fix options for iio fmcomms2 source and sink
Grc options for iio fmcomms2 were mislabeling the options, there were
3 labels for options, but only two were valid.

Signed-off-by: Lucas Kierulff Balabram <lucaskbalabram@gmail.com>

--- a/gr-iio/grc/iio_fmcomms2_source.block.yml
+++ b/gr-iio/grc/iio_fmcomms2_source.block.yml
@@ -6,10 +6,10 @@ parameters:
 -   id: type
     label: Output Type
     dtype: enum
-    options: [fc32, sc16]
+    options: [s, fc32, sc16]
     option_labels: [int16, Complex float32, Complex int16]
     option_attributes:
-        type: [fc32, sc16]
+        type: [s, fc32, sc16]
     hide: part
 
 -   id: uri
