kernel: export headers
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/kernel/include/gnuradio/kernel/filter/meson.build
+++ b/kernel/include/gnuradio/kernel/filter/meson.build
@@ -11,4 +11,4 @@ headers = [
     'single_pole_iir.h'
 ]
 
-install_headers(headers, subdir : 'gnuradio/kernel/digital')
+install_headers(headers, subdir : 'gnuradio/kernel/filter')
