gr: update high_res_timer and install it
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/include/gnuradio/meson.build
+++ b/gr/include/gnuradio/meson.build
@@ -46,7 +46,8 @@ runtime_headers = [
     'buffer_sm.h',
     'executor.h',
     'constants.h',
-    'registry.h'
+    'registry.h',
+    'high_res_timer.h'
 ]
 
 install_headers(runtime_headers, subdir : 'gnuradio')
