--- a/blocklib/meson.build
+++ b/blocklib/meson.build
@@ -1,7 +1,11 @@
 
 gen_meson_args = join_paths(meson.project_source_root(),'utils','blockbuilder','scripts','gen_meson.py')
 if GR_ENABLE_PYTHON
+if GR_PURELIB 
+run_command('python3', gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), '--enable_python', '--enable_purelib', check: true)
+else
 run_command('python3', gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), '--enable_python', check: true)
+endif
 else
 run_command('python3', gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), check: true)
 endif
