--- a/kernel/filter/python/kernel/filter/meson.build
+++ b/kernel/filter/python/kernel/filter/meson.build
@@ -13,4 +13,4 @@ configure_file(copy: true,
 )
 endforeach
 
-py3.install_sources(files(srcs), subdir : join_paths('gnuradio', 'kernel', 'filter'))
+py3.install_sources(files(srcs), subdir : join_paths('gnuradio', 'kernel', 'filter'), pure : py3_purelib)
