--- a/python/gnuradio/meson.build
+++ b/python/gnuradio/meson.build
@@ -7,4 +7,4 @@ configure_file(copy: true,
 )
 endforeach
 
-py3.install_sources(files(srcs), subdir : join_paths('gnuradio'))
+py3.install_sources(files(srcs), subdir : join_paths('gnuradio'), pure : py3_purelib)
