--- a/blocklib/fec/lib/meson.build
+++ b/blocklib/fec/lib/meson.build
@@ -6,7 +6,7 @@ cmake_conf.set('module', 'fec')
 cmake.configure_package_config_file(
   name : 'gnuradio-fec',
   input : join_paths(meson.source_root(),'cmake','Modules','gnuradioConfigModule.cmake.in'),
-  install_dir : get_option('prefix') / 'lib' / 'cmake' / 'gnuradio',
+  install_dir : get_option('prefix') / get_option('libdir') / 'cmake' / 'gnuradio',
   configuration : cmake_conf
 )
 
