--- a/blocklib/fft/lib/meson.build
+++ b/blocklib/fft/lib/meson.build
@@ -47,7 +47,7 @@ cmake_conf.set('module', 'fft')
 cmake.configure_package_config_file(
   name : 'gnuradio-fft',
   input : join_paths(meson.source_root(),'cmake','Modules','gnuradioConfigModule.cmake.in'),
-  install_dir : get_option('prefix') / 'lib' / 'cmake' / 'gnuradio',
+  install_dir : get_option('prefix') / get_option('libdir') / 'cmake' / 'gnuradio',
   configuration : cmake_conf
 )
 
