--- a/gr/python/gnuradio/gr/bindings/meson.build
+++ b/gr/python/gnuradio/gr/bindings/meson.build
@@ -39,7 +39,7 @@ gnuradio_runtime_pybind = py3.extension_module('gr_python',
     link_language : 'cpp',
     install : true,
     cpp_args : cpp_args,
-    install_dir : join_paths(py3.get_install_dir(),'gnuradio','gr')
+    install_dir : join_paths(py3_install_dir,'gnuradio','gr')
 )
 
 gnuradio_runtime_pybind_dep = declare_dependency(
