--- a/kernel/digital/python/kernel/digital/bindings/meson.build
+++ b/kernel/digital/python/kernel/digital/bindings/meson.build
@@ -13,7 +13,7 @@ kernel_digital_pybind = py3.extension_module('kernel_digital_python',
     link_language : 'cpp',
     install : true,
     cpp_args : cpp_args,
-    install_dir : join_paths(py3.get_install_dir(),'gnuradio','kernel','digital')
+    install_dir : join_paths(py3_install_dir,'gnuradio','kernel','digital')
 )
 
 kernel_digital_pybind_dep = declare_dependency(
