--- a/kernel/filter/lib/meson.build
+++ b/kernel/filter/lib/meson.build
@@ -30,7 +30,7 @@ cmake_conf.set('module', 'kernel-filter')
 cmake.configure_package_config_file(
   name : 'gnuradio-kernel-filter',
   input : join_paths(meson.source_root(),'cmake','Modules','gnuradioConfigModule.cmake.in'),
-  install_dir : get_option('prefix') / 'lib' / 'cmake' / 'gnuradio',
+  install_dir : get_option('prefix') / get_option('libdir') / 'cmake' / 'gnuradio',
   configuration : cmake_conf
 )
 
