--- a/kernel/filter/python/kernel/filter/bindings/meson.build
+++ b/kernel/filter/python/kernel/filter/bindings/meson.build
@@ -14,7 +14,7 @@ kernel_filter_pybind = py3.extension_module('kernel_filter_python',
     link_language : 'cpp',
     install : true,
     cpp_args : cpp_args,
-    install_dir : join_paths(py3.get_install_dir(),'gnuradio','kernel','filter')
+    install_dir : join_paths(py3_install_dir,'gnuradio','kernel','filter')
 )
 
 kernel_filter_pybind_dep = declare_dependency(
