--- a/kernel/math/lib/meson.build
+++ b/kernel/math/lib/meson.build
@@ -34,7 +34,7 @@ cmake_conf.set('module', 'kernel-math')
 cmake.configure_package_config_file(
   name : 'gnuradio-kernel-math',
   input : join_paths(meson.source_root(),'cmake','Modules','gnuradioConfigModule.cmake.in'),
-  install_dir : get_option('prefix') / 'lib' / 'cmake' / 'gnuradio',
+  install_dir : get_option('prefix') / get_option('libdir') / 'cmake' / 'gnuradio',
   configuration : cmake_conf
 )
 
