--- a/kernel/test/meson.build
+++ b/kernel/test/meson.build
@@ -6,6 +6,7 @@ qa_srcs = ['qa_fast_atan2f',
            'qa_fxpt',
            'qa_math',
            'qa_sincos'
+           
           ]
 deps = [gr_kernel_lib_dep,
          gnuradio_gr_dep,
@@ -24,5 +25,6 @@ endforeach
 
 if GR_ENABLE_PYTHON
     test('Random', py3, args : files('qa_random.py'), env: TEST_ENV)
+    test('PM Remez', py3, args : files('qa_pm_remez.py'), env: TEST_ENV)
 endif
 
