gr: host_buffer and qa test
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/lib/meson.build
+++ b/gr/lib/meson.build
@@ -61,7 +61,8 @@ runtime_sources = [
   'hier_block.cc',
   'prefs.cc',
   'tag.cc',
-  'registry.cc'
+  'registry.cc',
+  'buffer_cpu_host.cc'
 ]
 
 if IMPLEMENT_CUDA
