--- a/blocklib/analog/random_source/random_source.yml
+++ b/blocklib/analog/random_source/random_source.yml
@@ -2,6 +2,7 @@ module: analog
 block: random_source
 label: Random Source
 blocktype: grc
+
 category: '[Core]/Waveform Generators'
 
 typekeys:
@@ -13,6 +14,7 @@ typekeys:
         - ri8
 
 grc:
+    flags: [python]
     templates:
         imports: |-
             from gnuradio import blocks
