utils/blockbuilder: correct vector type for typekeys and raw
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/blocks/vector_source/vector_source.yml
+++ b/blocklib/blocks/vector_source/vector_source.yml
@@ -17,7 +17,7 @@ typekeys:
 parameters:
 -   id: data
     label: Data
-    dtype: T
+    dtype: typekeys/T
     container: vector
     settable: false
     grc:
