meson: Differentiate between Python for build and target/installation.
This adds a `py3_build` Python program object that is used for running
Python scripts during the build process. The separate `py3` Python
installation object represents the target of the build, i.e. what
extension modules are built for and where the installation goes. It was
necessary to clarify in a few places which of these Pythons needs to be
used.

This will facilitate easier cross-compilation (although some issues
remain with needing to run the target Python for finding numpy and
running tests). It also enables building the conda package, which
naturally puts `meson` and its Python in a separate build environment
than the host `python`.

Signed-off-by: Ryan Volz <ryan.volz@gmail.com>

--- a/blocklib/analog/test/meson.build
+++ b/blocklib/analog/test/meson.build
@@ -3,7 +3,7 @@
 ###################################################
 
 if GR_ENABLE_PYTHON
-    test('qa_sig_source', find_program('qa_sig_source.py'), env: TEST_ENV)
-    test('qa_noise', find_program('qa_noise.py'), env: TEST_ENV)
-    test('qa_quadrature_demod', find_program('qa_quadrature_demod.py'), env: TEST_ENV)
+    test('qa_sig_source', py3, args: files('qa_sig_source.py'), env: TEST_ENV)
+    test('qa_noise', py3, args: files('qa_noise.py'), env: TEST_ENV)
+    test('qa_quadrature_demod', py3, args: files('qa_quadrature_demod.py'), env: TEST_ENV)
 endif
