--- a/blocklib/meson.build
+++ b/blocklib/meson.build
@@ -1,17 +1,17 @@
 
 gen_meson_args = join_paths(meson.project_source_root(),'utils','blockbuilder','scripts','gen_meson.py')
 if GR_ENABLE_PYTHON
-if GR_PURELIB 
-run_command('python3', gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), '--enable_python', '--enable_purelib', check: true)
+if GR_PURELIB
+run_command(py3_build, gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), '--enable_python', '--enable_purelib', check: true)
 else
-run_command('python3', gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), '--enable_python', check: true)
+run_command(py3_build, gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), '--enable_python', check: true)
 endif
 else
-run_command('python3', gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), check: true)
+run_command(py3_build, gen_meson_args, join_paths(meson.project_source_root(),'blocklib'), check: true)
 endif
-  
 
-if get_option('enable_gr_math') 
+
+if get_option('enable_gr_math')
 subdir('math')
 endif
 if get_option('enable_gr_blocks')
