--- a/blocklib/fileio/lib/meson.build
+++ b/blocklib/fileio/lib/meson.build
@@ -30,3 +30,23 @@ gnuradio_blocklib_fileio_lib = library('gnuradio-blocklib-fileio',
 gnuradio_blocklib_fileio_dep = declare_dependency(include_directories : incdir,
 					   link_with : gnuradio_blocklib_fileio_lib,
                        dependencies : fileio_deps)
+
+cmake_conf = configuration_data()
+cmake_conf.set('libdir', join_paths(prefix,get_option('libdir')))
+cmake_conf.set('module', 'fileio')
+cmake.configure_package_config_file(
+  name : 'gnuradio-fileio',
+  input : join_paths(meson.source_root(),'cmake','Modules','gnuradioConfigModule.cmake.in'),
+  install_dir : get_option('prefix') / get_option('libdir') / 'cmake' / 'gnuradio',
+  configuration : cmake_conf
+)
+
+pkg = import('pkgconfig')
+libs = []     # the library/libraries users need to link against
+h = ['.'] # subdirectories of ${prefix}/${includedir} to add to header path
+pkg.generate(libraries : libs,
+             subdirs : h,
+             version : meson.project_version(),
+             name : 'libgnuradio-fileio',
+             filebase : 'gnuradio-fileio',
+             description : 'GNU Radio FileIO Module')
