uhd: rfnoc: Allow streamers to consume stream_args
The GRC bindings for the TX/RX streamers now allow setting stream args.
This allows passing stream arguments to UHD, e.g., for raw UDP
streaming, or for setting spp values.

Signed-off-by: Martin Braun <martin.braun@ettus.com>

--- a/gr-uhd/grc/uhd_rfnoc_rx_streamer.block.yml
+++ b/gr-uhd/grc/uhd_rfnoc_rx_streamer.block.yml
@@ -12,7 +12,7 @@ templates:
             cpu_format="${ output_type.type }",
             otw_format="${ otw.type }",
             channels=[],
-            args="",
+            args=${ args },
         ),
         1,
         True
@@ -23,6 +23,10 @@ parameters:
   label: Number of Channels
   dtype: int
   default: 1
+  hide: part
+- id: args
+  label: Args
+  dtype: string
   hide: part
 - id: otw
   label: Wire Format
