--- a/gr-uhd/grc/uhd_rfnoc_tx_streamer.block.yml
+++ b/gr-uhd/grc/uhd_rfnoc_tx_streamer.block.yml
@@ -12,7 +12,7 @@ templates:
             cpu_format="${ input_type.type }",
             otw_format="${ otw.type }",
             channels=[],
-            args="",
+            args=${ args },
         ),
         1
     )
@@ -22,6 +22,10 @@ parameters:
   label: Number of Channels
   dtype: int
   default: 1
+  hide: part
+- id: args
+  label: Args
+  dtype: string
   hide: part
 - id: input_type
   label: Input Type
