uhd: rfnoc: Enable vlen and types for streamers
- RX and TX streamers can now set vector lengths
- The RX streamer GRC binding gets a 'byte' type

Signed-off-by: Martin Braun <martin.braun@ettus.com>

--- a/gr-uhd/grc/uhd_rfnoc_tx_streamer.block.yml
+++ b/gr-uhd/grc/uhd_rfnoc_tx_streamer.block.yml
@@ -14,7 +14,7 @@ templates:
             channels=[],
             args=${ args },
         ),
-        1
+        ${ vlen }
     )
 
 parameters:
@@ -26,6 +26,11 @@ parameters:
 - id: args
   label: Args
   dtype: string
+  hide: part
+- id: vlen
+  label: Vector Length
+  dtype: int
+  default: 1
   hide: part
 - id: input_type
   label: Input Type
@@ -48,6 +53,7 @@ inputs:
 - domain: stream
   dtype: ${ input_type.type }
   multiplicity: ${ num_chans }
+  vlen: ${ vlen }
 
 outputs:
 - domain: rfnoc
