--- a/gr-uhd/grc/uhd_rfnoc_rx_streamer.block.yml
+++ b/gr-uhd/grc/uhd_rfnoc_rx_streamer.block.yml
@@ -14,7 +14,7 @@ templates:
             channels=[],
             args=${ args },
         ),
-        1,
+        ${ vlen },
         True
     )
 
@@ -28,21 +28,26 @@ parameters:
   label: Args
   dtype: string
   hide: part
+- id: vlen
+  label: Vector Length
+  dtype: int
+  default: 1
+  hide: part
 - id: otw
   label: Wire Format
   dtype: enum
-  options: ['', sc16]
-  option_labels: [Automatic, Complex int16]
+  options: ['', sc16, s8]
+  option_labels: [Automatic, Complex int16, Byte]
   option_attributes:
-    type: ['', sc16]
+    type: ['', sc16, s8]
   hide: part
 - id: output_type
   label: Output Type
   dtype: enum
-  options: [fc32, sc16]
-  option_labels: [Complex float32, Complex int16]
+  options: [fc32, sc16, s8]
+  option_labels: [Complex float32, Complex int16, Byte]
   option_attributes:
-    type: [fc32, sc16]
+    type: [fc32, sc16, s8]
   hide: part
 
 asserts:
@@ -57,5 +62,6 @@ outputs:
 - domain: stream
   dtype: ${ output_type.type }
   multiplicity: ${ num_chans }
+  vlen: ${ vlen }
 
 file_format: 1
