qtgui: cmake: Align CMake structure with other modules
This adds two changes to the qtgui CMake:

- The structure of lib/CMakeLists.txt now matches that of other
  in-tree modules. This is so that in the future, we can have optional
  sources, e.g. if we make QtOpenGL an optional dependency, and want to
  add blocks based on its existence.
- We find the Qt5 package with QtWidgets as a COMPONENT, rather than
  directly for Qt5Widgets. This allows adding OPTIONAL_COMPONENTS later
  on.

Signed-off-by: Martin Braun <martin.braun@ettus.com>

--- a/gr-qtgui/CMakeLists.txt
+++ b/gr-qtgui/CMakeLists.txt
@@ -12,7 +12,9 @@ include(GrPython)
 
 # Note: gr-qtgui requires Qt5.
 
-find_package(Qt5Widgets QUIET)
+find_package(Qt5 QUIET
+    COMPONENTS Widgets
+)
 set(QT_FOUND ${Qt5Widgets_FOUND})
 
 gr_python_check_module("PyQt5" PyQt5 True PYQT5_FOUND)
