uhd: rfnoc: Add bindings and example for keep 1 in N
Signed-off-by: Martin Braun <martin.braun@ettus.com>

--- a/gr-uhd/grc/CMakeLists.txt
+++ b/gr-uhd/grc/CMakeLists.txt
@@ -46,6 +46,7 @@ if(ENABLE_UHD_RFNOC)
               uhd_rfnoc_ddc.block.yml
               uhd_rfnoc_duc.block.yml
               uhd_rfnoc_fft.block.yml
+              uhd_rfnoc_keep_one_in_n.block.yml
               uhd_rfnoc_graph.block.yml
               uhd_rfnoc_rx_radio.block.yml
               uhd_rfnoc_rx_streamer.block.yml
