gr: install custom_lock header
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/include/gnuradio/meson.build
+++ b/gr/include/gnuradio/meson.build
@@ -47,7 +47,8 @@ runtime_headers = [
     'executor.h',
     'constants.h',
     'registry.h',
-    'high_res_timer.h'
+    'high_res_timer.h',
+    'custom_lock.h'
 ]
 
 install_headers(runtime_headers, subdir : 'gnuradio')
