kernel/filter: add optfir fir_filter_with_buffer, update pm_remez
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/kernel/filter/include/gnuradio/kernel/filter/meson.build
+++ b/kernel/filter/include/gnuradio/kernel/filter/meson.build
@@ -1,14 +1,18 @@
 headers = [
     'fft_filter.h',
     'fir_filter.h',
+    'fir_filter_with_buffer.h',
     'firdes.h',
     'iir_filter.h',
     'interpolator_taps.h',
     'mmse_fir_interpolator_ff.h',
     'moving_averager.h',
+    'optfir.h',
     'pfb_arb_resampler.h',
+    'pm_remez.h',
     'polyphase_filterbank.h',
-    'single_pole_iir.h'
+    'single_pole_iir.h',
+    
 ]
 
 install_headers(headers, subdir : 'gnuradio/kernel/filter')
