kernel/math: add control_loop and rotator
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/kernel/math/include/gnuradio/kernel/math/meson.build
+++ b/kernel/math/include/gnuradio/kernel/math/meson.build
@@ -1,10 +1,12 @@
 headers = [
+'control_loop.h',
 'fxpt_nco.h',
 'fxpt_vco.h',
 'fxpt.h',
 'math.h',
 'nco.h',
 'random.h',
+'rotator.h',
 'sincos.h',
 'vco.h',
 'xoroshiro128p.h',
