analog: update fs param of fm_deemph and other cleanup
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/analog/fm_deemph/fm_deemph.yml
+++ b/blocklib/analog/fm_deemph/fm_deemph.yml
@@ -8,7 +8,7 @@ category: '[Core]/Modulators'
 parameters:
 -   id: fs
     label: Sampling Rate
-    dtype: int
+    dtype: float
     grc:
         default: 400000
 -   id: tau
