--- a/blocklib/analog/lib/meson.build
+++ b/blocklib/analog/lib/meson.build
@@ -1,5 +1,5 @@
 analog_deps += [gnuradio_gr_dep, gr_kernel_math_lib_dep, gr_kernel_analog_lib_dep, gnuradio_blocklib_filter_dep, 
-    volk_dep, fmt_dep, pmtf_dep]
+    gnuradio_blocklib_math_dep, gnuradio_blocklib_streamops_dep, volk_dep, fmt_dep, pmtf_dep]
 
 # analog_sources += 'kernel/agc.cc'
 block_cpp_args = ['-DHAVE_CPU', '-DHAVE_HIER']
