filter: move qa files in block dirs
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/filter/test/meson.build
+++ b/blocklib/filter/test/meson.build
@@ -3,8 +3,8 @@
 ###################################################
 
 if GR_ENABLE_PYTHON
-    test('qa_fir_filter', find_program('qa_fir_filter.py'), env: TEST_ENV)
-    test('qa_iir_filter', find_program('qa_iir_filter.py'), env: TEST_ENV)
-    test('qa_pfb_channelizer', find_program('qa_pfb_channelizer.py'), env: TEST_ENV)
+    # test('qa_fir_filter', find_program('qa_fir_filter.py'), env: TEST_ENV)
+    # test('qa_iir_filter', find_program('qa_iir_filter.py'), env: TEST_ENV)
+    # test('qa_pfb_channelizer', find_program('qa_pfb_channelizer.py'), env: TEST_ENV)
     # test('qa_moving_average', find_program('qa_moving_average.py'), env: TEST_ENV)
 endif
