filter: add tap generation into pfb_arb_resampler
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/filter/pfb_arb_resampler/pfb_arb_resampler.yml
+++ b/blocklib/filter/pfb_arb_resampler/pfb_arb_resampler.yml
@@ -1,6 +1,6 @@
 module: filter
 block: pfb_arb_resampler
-label: pfb_arb_resampler
+label: PFB Arbitrary Resampler
 blocktype: block
 category: '[Core]/Resamplers'
 
