filter: add grc param for fir_filter
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/filter/fir_filter/fir_filter.yml
+++ b/blocklib/filter/fir_filter/fir_filter.yml
@@ -44,6 +44,8 @@ parameters:
     label: Decimation
     dtype: size
     settable: false
+    grc:
+      default: 1
 -   id: taps
     label: Taps
     dtype: TAP_T
