pfb_arb_resampler working
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/filter/pfb_arb_resampler/pfb_arb_resampler.yml
+++ b/blocklib/filter/pfb_arb_resampler/pfb_arb_resampler.yml
@@ -63,7 +63,7 @@ callbacks:
     return: size_t
     const: true
 -   id: phase_offset
-    return: size_t
+    return: rf32
     args:
     - id: freq
       dtype: rf32
